--- a/public/client/views/partner/partnerCurrSemApp.view.html
+++ b/public/client/views/partner/partnerCurrSemApp.view.html
@@ -76,19 +76,11 @@
                                             <!--{{field.options}}-->
                                             <div ng-repeat="option in field.options track by $index">
                                                 <input  type="checkbox" ng-model="option.selected" disabled>{{option.label}}
-                                                <!--<div ng-if="option.selected==='true'">-->
-                                                <!--<input ng-model="option.selected" checked type="checkbox" value="{{option.value}}">{{option.label}}-->
-                                                <!--</div>-->
-                                                <!--<div ng-if="option.selected==='false'">-->
-                                                <!--<input ng-model="option.selected"  type="checkbox" value="{{option.value}}">{{option.label}}-->
-                                                <!--</div>-->
                                             </div>
                                         </div>
-
                                         <div ng-switch-when="RADIOS">
-                                            <!--{{field.options}}-->
                                             <div ng-repeat="option in field.options ">
-                                                <input ng-model="option.selected" name="1" type="radio" disabled>{{option.label}}
+                                                <input ng-model="field.selected" name="1" type="radio" value="{{option.value}}" disabled>{{option.label}}
                                             </div>
                                         </div>
 
@@ -155,19 +147,14 @@
                                                 <!--{{field.options}}-->
                                             <div ng-repeat="option in field.options track by $index">
                                                 <input  type="checkbox" ng-model="option.selected">{{option.label}}
-                                                <!--<div ng-if="option.selected==='true'">-->
-                                                    <!--<input ng-model="option.selected" checked type="checkbox" value="{{option.value}}">{{option.label}}-->
-                                                <!--</div>-->
-                                                <!--<div ng-if="option.selected==='false'">-->
-                                                    <!--<input ng-model="option.selected"  type="checkbox" value="{{option.value}}">{{option.label}}-->
-                                                <!--</div>-->
+
                                             </div>
                                         </div>
 
                                         <div ng-switch-when="RADIOS">
                                             <!--{{field.options}}-->
                                             <div ng-repeat="option in field.options ">
-                                                <input ng-model="option.selected" name="1" type="radio" >{{option.label}}
+                                                <input ng-model="field.selected" name="1"  value="{{option.value}}"  type="radio" >{{option.label}}
                                             </div>
                                         </div>
 
@@ -241,8 +228,8 @@
                                             </div>
 
                                             <div ng-switch-when="RADIOS">
-                                                <div ng-repeat="option in field.options track by $index">
-                                                    <input  type="radio" value="{{option.value}}">{{option.label}}
+                                                <div ng-repeat="option in field.options track by $index" >
+                                                    <input name="1" ng-model="field.selected" type="radio" value="{{option.value}}" >{{option.label}}
                                                 </div>
                                             </div>
 
