--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -25,6 +25,12 @@
          <a class="btn btn-primary" type="button" ng-click="model.changeView('UserInfo')">
              User Info
          </a>
+         <a class="btn btn-primary" type="button" ng-click="model.changeView('Opportunities')">
+             Opportunities
+         </a>
+         <a class="btn btn-primary" type="button" ng-click="model.changeView('ChangeOrg')">
+             Change Organisations
+         </a>
          <button type="button" class="btn btn-danger"  data-toggle="modal" data-target="#editApp">Archive All Applications</button>
 
 
@@ -93,6 +99,7 @@
                             <th>Last Name</th>
                             <th>Username</th>
                             <th>Role</th>
+                            <th>Organization</th>
                             <th>Status</th>
                             <th>Created Date</th>
                             <th>Actions</th>
@@ -105,10 +112,11 @@
                             <td>{{user.lastName}}</td>
                             <td>{{user.username}}</td>
                             <td><span>{{user.role}}</span>
+                            <td><span>{{user.orgName}}</span>
                             <td><span>{{user.status}}</span>
                             <td>{{user.createdDate}}</td>
-                            <td><button ng-if="user.status =='NoStatus'" ng-click="model.activateRejectUser(user,'Approved','0')">Activate</button>
-                                <button ng-if="user.status =='NoStatus'" ng-click="model.activateRejectUser(user,'Rejected','1')">Reject</button>
+                            <td><button ng-if="user.status =='NoStatus'" ng-click="model.activateRejectUser(user,'Approved','0')" class="btn btn-primary">Activate</button>
+                                <button ng-if="user.status =='NoStatus'" ng-click="model.activateRejectUser(user,'Rejected','1')" class="btn btn-danger">Reject</button>
                                 <span ng-if="user.status =='Rejected' && !user.reject"></span>
                                 <button ng-if="user.status =='Rejected'" ng-show="user.reject" ng-click="model.activateRejectUser(user,'Rejected','2')">Submit</button>
                                 <button ng-if="user.status =='Rejected'" ng-show="user.reject" ng-click="model.rejectUserCancel(user,'Rejected','2')">Cancel</button>
@@ -246,6 +254,7 @@
                             <th>Last Name</th>
                             <th>Username</th>
                             <th>Role</th>
+                            <th>Organisation</th>
                             <th>Status</th>
                             <th>Created Date</th>
                             <th>Actions</th>
@@ -258,15 +267,149 @@
                             <td>{{user.lastName}}</td>
                             <td>{{user.username}}</td>
                             <td><span>{{user.role}}</span>
+
+                            <td><span>{{user.orgName}}</span>
                             <td><span>{{user.status}}</span>
                             <td>{{user.createdDate}}</td>
-                            <td><button ng-click="model.deleteUserCancel(user)">Delete</button>
+                            <td><button ng-click="model.deleteUserCancel(user)" class="btn redBG btn-danger btn-block">Delete</button>
                             </td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+
+            <div ng-switch-when="Opportunities">
+
+                <form class="form-signin" style="max-width: 100%  !important;">
+                    <h4 class="form-signin-heading" style="color:green">{{model.message}}</h4>
+
+                    <ul class="nav nav-tabs">
+                        <li class="active">
+                            <a href data-target="#OppInfo" ng-click="model.registerEnableOrf('partner')" data-toggle="tab">Create Opportunity</a>
+                        </li>
+
+                        <li>
+                            <a href data-target="#OppView" ng-click="model.getOppInfo()" data-toggle="tab">View OppInfo Req</a>
+                        </li>
+                        <li>
+                            <a href data-target="#OppViewAllReq" ng-click="model.getOppInfo()" data-toggle="tab">Approved Opportunities</a>
+                        </li>
+
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="OppInfo">
+
+                            <h2 class="form-signin-heading" style="color:#e21a2d">Create Opportunity</h2>
+                            <h4 class="form-signin-heading" style="color:green">{{model.message}}</h4>
+                            <input type="text" class="form-control" placeholder="Opp Name" ng-model="model.oppInfo.oppHeader" required="" autofocus="" />
+                            <textarea class="form-control"
+                                      placeholder="Opp Desc" ng-model="model.oppInfo.oppBody" required="" autofocus="" ng-init="model.oppInfo.publishTo =0"/>
+                            <br>
+                            <a ng-click="model.registerOppInfo(model.oppInfo)" class="btn redBG btn-danger btn-block" style="width:223px">Create Opportunity</a>
+                        </div>
+
+                        <div class="tab-pane" id="OppView" ng-init="model.getTable()">
+
+                            <h2>Opportunities Details</h2>
+                            <table class="table table-striped table-bordered" border="1" id="example">
+                                <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Name</th>
+                                    <th>Description</th>
+                                    <th>Created By</th>
+                                    <th>Requested By</th>
+                                    <td>Organisation Name</td>
+                                    <th colspan="2">Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="user in model.oppInfoArr | filter: { status: 'requested' } track by $index">
+                                    <th scope="row">{{$index+1}}</th>
+                                    <td>{{user.oppHeader}}</td>
+                                    <td>{{user.oppBody}}</td>
+                                    <td>{{user.createdBy}}</td>
+                                    <td>{{user.requestedBy}}</td>
+                                    <td>{{user.partnerOrgId}}</td>
+                                    <td><button ng-click="model.approveOppInfo(user,'approved')" class="btn btn-primary">Approve</button>
+                                    <td><button ng-click="model.approveOppInfo(user,'rejected')" class="btn btn-danger">Reject</button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                        <div class="tab-pane" id="OppViewAllReq" ng-init="model.getTable()">
+
+                            <h2>Approved Opportunities</h2>
+                            <button style="margin-left: 915px;" class="btn btn-link" ng-click="exportToExcel('#tableToExport')">
+                                <span class="glyphicon glyphicon-share"></span>
+                                Export to Excel
+                            </button>
+                            <table id="tableToExport" class="table table-striped table-bordered" border="1">
+                                <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Opportunity Name</th>
+                                    <th>Opportunity Description</th>
+                                    <th>Created By</th>
+                                    <th>Requested By</th>
+                                    <td>Org ID</td>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="user in model.oppInfoArr | filter: { status: 'approved' } track by $index">
+                                    <th scope="row">{{$index+1}}</th>
+                                    <td>{{user.oppHeader}}</td>
+                                    <td>{{user.oppBody}}</td>
+                                    <td>{{user.createdBy}}</td>
+                                    <td>{{user.requestedBy}}</td>
+                                    <td>{{user.partnerOrgId}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+
+                </form>
+            </div>
+
+            <div ng-switch-when="ChangeOrg" style="border-radius: 10px">
+                <br> <br>
+                <form class="form-signin" style="max-width: 500px !important;">
+                    <h5 class="form-signin-heading" style="color:#e21a2d;padding-left:20px">{{model.message}}</h5>
+                    <div class="container-fluid">
+
+                        <div class="col-sm-6" style="padding-top: 20px">
+                            <label> User to Map</label>
+                            <select class="form-control" ng-model="model.mapOrgUser.userId" ng-change="model.getModelDisplay(model.mapOrgUser.userId)">
+                                <option value="" disabled selected>Select User</option>
+                                <option ng-repeat="org in model.allUsers " value="{{org._id}}">{{org.username}}</option>
+                            </select>
+                            <label>Org :: {{model.orgName}}</label>
+
+                        </div>
+
+                        <div class="col-sm-6">
+
+                            <div class="form-group" style="padding-top: 20px">
+                                <label> Organisation to Map</label>
+                                <select class="form-control" ng-model="model.mapOrgUser.orgId">
+                                    <option value="" disabled selected>Select Organization</option>
+                                    <option ng-repeat="org in model.OrgsInfo" value="{{org._id}}">{{org.name}}</option>
+                                </select>
+                            </div>
+                        </div>
+
+
+
+                        <button class="btn-group-lg" ng-click="model.mapUserToOrg(model.mapOrgUser)">Update Mapping</button>
+                    </div>
+                </form>
+            </div>
+
 
         </div>
     </div>
